<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/menu_home"
      android:title="@string/home"
      android:icon="@drawable/ic_home"
      android:iconTint="@color/black"/>

    <item
        android:id="@+id/menu_cart"
        android:title="Cart"
        android:icon="@drawable/ic_shopping_cart"
        android:iconTint="@color/black"/>
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/black"/>
    <item
        android:id="@+id/menu_menu"
        android:title="@string/menu"
        android:icon="@drawable/ic_menu_icon"
        android:iconTint="@color/black"/>
    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_icon"
        android:iconTint="@color/black"/>
</menu>