<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".adminfragments.CreateUserFragment">

        <ImageView
            android:id="@+id/image_view_app_logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/yeon_sung"
            android:text="@string/waves_of_food"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_app_logo" />


        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/loto_bold"
            android:text="Create New User Admin "
            android:textColor="@color/green"
            android:textSize="19sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:hint="Name"
            android:drawableLeft="@drawable/ic_person_icon"
            android:drawablePadding="20dp"
            android:padding="16dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/login_tv"
            app:layout_constraintStart_toStartOf="@+id/login_tv"
            app:layout_constraintTop_toBottomOf="@+id/login_tv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email"
            android:drawableLeft="@drawable/ic_message_icon"
            android:drawablePadding="20dp"
            android:padding="16dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_name"
            app:layout_constraintStart_toStartOf="@+id/edit_text_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password"
            android:padding="16dp"
            android:drawableLeft="@drawable/ic_password_lock"
            android:drawablePadding="20dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
            app:layout_constraintStart_toStartOf="@+id/edit_text_email"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:background="@drawable/green_button_bg"
            android:fontFamily="@font/yeon_sung"
            android:text="Create New User"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>